--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,15 +1,19 @@
 
 .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center; 
+     @media screen and (min-width: 480px) {
+    
+  }
+  @media screen and (max-width: 768px) {
+    width: 768px;  
+  }
+    @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
-    text-align: center;
-    .hero {
-        max-height: 600px;
-        max-width: 1200px;
-        padding-top: 200px;
-        padding-bottom: 200px;
-        border: 1px solid transparent;
     }
+    
 }
 .section-nopaddingtop {
     padding-top: 0;
