--- a/css/main.css
+++ b/css/main.css
@@ -70,9 +70,8 @@ body {
   margin: -1px;
 }
 
-.header__navigation,
-.header__list, .header__item > .link, .softskills__list, .softskills__link, .about__list,
-.about__item, .about__item-text, .galery__list, .clients__item, .footer, .footer__social-link, .team__social-link, .portfolio__btn, .modal-close, .check-text:last-of-type {
+.about__list,
+.about__item, .about__item-text, .clients__item, .footer, .footer__social-link, .team__social-link, .portfolio__btn, .modal-close, .check-text:last-of-type {
   display: flex;
   align-items: center;
 }
@@ -151,6 +150,7 @@ body {
 
 .header__link-style {
   color: var(--second-text-color);
+  flex-wrap: wrap;
 }
 
 .current {
@@ -159,12 +159,42 @@ body {
 
 .header__navigation,
 .header__list {
-  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
 }
 
 .header__item > .link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .header__item > .link {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__item > .link {
+    margin-left: 84px;
+    margin-right: 0;
+    padding-top: -10px;
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__item > .link {
+    align-items: baseline;
+    margin: 0;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .header__list > .header__item {
+    display: none;
+  }
 }
 
 .header__list > .header__item:not(:last-child) {
@@ -192,8 +222,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  min-height: 600px;
-  max-width: 1600px;
+  min-height: 400px;
+  max-width: 100%;
   display: flex;
   align-items: center;
   margin-right: auto;
@@ -201,7 +231,7 @@ body {
 }
 
 .hero__title {
-  width: 696px;
+  width: 480px;
   margin-top: 0;
   margin-right: auto;
   margin-bottom: 30px;
@@ -220,7 +250,7 @@ body {
 }
 
 .softskills__title-text {
-  width: 696px;
+  width: 360px;
   margin-top: 0;
   margin-right: auto;
   margin-bottom: 30px;
@@ -237,36 +267,124 @@ body {
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 768px) {
+  .softskills__title-text {
+    width: 696px;
+  }
+}
+
 .softskills__title {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--main-title-color);
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .softskills__after-title {
   line-height: 1.71;
   color: var(--second-text-color);
+  text-align: left;
+  width: 420px;
+}
+
+@media screen and (min-width: 768px) {
+  .softskills__after-title {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .softskills__after-title {
+    width: 270px;
+  }
 }
 
 .softskills__list {
-  text-align: left;
+  margin-bottom: -30px;
+  text-align: center;
 }
 
-.softskills__list > .softskills__pre-title:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .softskills__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .softskills__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .softskills__pre-title {
+    text-align: left;
+    width: 420px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .softskills__pre-title {
+    width: 420px;
+    flex-basis: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .softskills__pre-title {
+    width: 270px;
+    margin-right: 15px;
+    flex-basis: calc(100% / 4 - 30px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .softskills__list > .softskills__pre-title:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .softskills__list > .item {
-  width: 270px;
+  width: 354px;
 }
 
 .softskills__link {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  width: 270px;
+  width: 420px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .softskills__link {
+    width: 354px;
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .softskills__link {
+    width: 270px;
+    margin-right: 15px;
+    flex-basis: calc(100% / 4 - 30px);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .about {
+    display: none;
+  }
 }
 
 .about__title {
@@ -325,14 +443,56 @@ body {
   text-align: left;
 }
 
+@media screen and (min-width: 768px) {
+  .galery__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .galery__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+  }
+}
+
 .galery__list > .galery__item:not(:last-child) {
   margin-right: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .galery__list > .galery__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .galery__style {
   background-color: var(--third-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .galery__style {
+    margin-bottom: 30px;
+    width: 420px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .galery__style {
+    margin-bottom: 30px;
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .galery__style {
+    width: 270;
+  }
 }
 
 .galery__text {
@@ -364,11 +524,35 @@ body {
   color: var(--second-title-color);
 }
 
+@media screen and (max-width: 767px) {
+  .galery__title {
+    font-size: 28px;
+    line-height: 1.18;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .galery__title {
+    font-size: 28px;
+    line-height: 1.18;
+    margin-bottom: 30px;
+  }
+}
+
 .clients__block {
   display: flex;
 }
 
+@media screen and (max-width: 1199px) {
+  .clients__block {
+    flex-wrap: wrap;
+    align-items: baseline;
+  }
+}
+
 .clients__list {
+  margin-bottom: 30px;
   margin-right: 30px;
 }
 
@@ -377,7 +561,7 @@ body {
 }
 
 .clients__list > .clients__list:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .clients__title {
@@ -388,6 +572,24 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
+}
+
+@media screen and (max-width: 767px) {
+  .clients__title {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__title {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    width: 170px;
+  }
 }
 
 .clients__item {
@@ -420,8 +622,14 @@ body {
 }
 
 .footer > .container {
-  display: flex;
-  align-items: baseline;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer > .container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer__text {
@@ -433,10 +641,6 @@ body {
   display: block;
 }
 
-.footer__navigation {
-  margin-right: 70px;
-}
-
 .footer__navigation > .link.logo.footer__logo {
   padding-top: 0;
   padding-right: 0;
@@ -446,6 +650,12 @@ body {
   margin-right: 0;
   margin-bottom: 20px;
   margin-left: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__navigation {
+    margin-right: 70px;
+  }
 }
 
 .footer__link {
@@ -461,6 +671,10 @@ body {
   color: var(--links-color);
 }
 
+.footer__link:last-child {
+  margin-bottom: 60px;
+}
+
 .footer__address-color {
   padding-top: 0;
   padding-right: 0;
@@ -472,11 +686,12 @@ body {
 
 .footer__social-icons {
   padding-top: 12px;
-  margin-right: 93px;
 }
 
 .footer__social-list {
   display: flex;
+  margin-bottom: 60px;
+  justify-content: center;
 }
 
 .footer__social-item {
@@ -511,11 +726,11 @@ body {
 }
 
 .footer__modal {
-  margin-right: 12px;
+  display: block;
 }
 
 .footer__modal-text {
-  width: 358px;
+  width: 450px;
   height: 50px;
   margin-right: 8px;
   padding-left: 16px;
@@ -528,25 +743,51 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__modal-text {
+    width: 358px;
+  }
 }
 
 .footer__input-icon {
   fill: var(--second-logo-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .down-contact {
+    margin-left: 93px;
+    display: flex;
+    height: 50px;
+  }
+}
+
 .portfolio {
   background-color: var(--hero-color);
 }
 
-.items {
-  text-align: center;
-  flex-wrap: wrap;
-  align-items: center;
-  display: flex;
+@media screen and (max-width: 767px) {
+  .items {
+    text-align: center;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 450px;
+  }
 }
 
-.items {
-  text-align: center;
+@media screen and (min-width: 768px) {
+  .items {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .items {
+    display: flex;
+  }
 }
 
 .items > .header__item:not(:last-child) {
@@ -563,17 +804,24 @@ body {
 
 .filter {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .portfolio__item {
   background-color: var(--hero-color);
+  width: 100%;
 }
 
 .header__list > .portfolio__item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio__item {
+    flex-basis: 50%;
+  }
 }
 
 .portfolio__cadr-overflow {
@@ -679,9 +927,27 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .container .header__navigation {
@@ -760,6 +1026,13 @@ body {
   transition: color var(--duration) linear, background-color var(--duration) linear, box-shadow var(--duration) linear;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio__btn {
+    margin-bottom: 15px;
+    margin-right: 8px;
+  }
+}
+
 .modal__btn {
   padding-top: 10px;
   padding-right: 32px;
@@ -820,17 +1093,22 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   text-align: center;
 }
 
-.section .hero {
-  max-height: 600px;
-  max-width: 1200px;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  border: 1px solid transparent;
+@media screen and (max-width: 768px) {
+  .section {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section-nopaddingtop {
