--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -52,6 +52,10 @@
     &:focus {
         @extend %bgc-shadow;
     }
+    @media screen and (min-width: 768px) {
+    margin-bottom: 15px;
+    margin-right: 8px;
+    }
 }
 .modal__btn {
   @extend %btn;
