--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -17,10 +17,20 @@
     background-color: var(--accent-color);
     fill: var(--second-logo-color);
   }
+  
 }
 .team__social-list {
   display: flex;
   justify-content: center;
+   @media screen and (max-width: 767px) {
+  
+}
+  @media screen and (min-width: 768px) {
+  }
+  
+  @media screen and (max-width: 1199px) {
+
+  }
 }
 .team__social-icon {
   fill: #afb1b8;
