--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,4 +1,8 @@
-
+.about {
+    @media screen and (max-width: 1199px) {
+    display: none;
+    }
+}
 .about__title {
     @include margin(0, 0, 50px, 0);
     font-weight: 700;
