--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,15 +1,29 @@
 
 .clients__block {
   display: flex;
+  @media screen and (max-width: 767px) {
+  
+}
+  @media screen and (min-width: 768px) {
+  }
+  
+  @media screen and (max-width: 1199px) {
+flex-wrap: wrap;
+align-items: baseline;
+  }
+  
 }
 .clients__list {
+  
+  margin-bottom: 30px;
   margin-right: 30px;
   & + & {
     margin-right: 30px;
   }
   & > &:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
   }
+  
 }
 .clients__title {
   margin: 0 0 50px 0;
@@ -19,6 +33,17 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
+  @media screen and (max-width: 767px) {
+  width: 210px;
+}
+  @media screen and (min-width: 768px) {
+width: 226px;
+
+  }
+  @media screen and (min-width: 1200px) {
+width: 170px;
+
+  }
 }
 .clients__item {
   justify-content: center;
