--- a/sass/layouts/_galery.scss
+++ b/sass/layouts/_galery.scss
@@ -6,10 +6,35 @@
   padding-bottom: 30px;
 }
 .galery__list {
-  @extend %align-list;
   text-align: left;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    
+  }
+  
   & > .galery__item:not(:last-child) {
     margin-right: 30px;
+    @media screen and (min-width: 768px){
+      margin-bottom: 30px;
+    }
+  }
+}
+.galery__item {
+  @media screen and (max-width: 767px) {
+  
+}
+  @media screen and (min-width: 768px) {
+  }
+  
+  @media screen and (max-width: 1199px) {
+
   }
 }
 .galery__style {
@@ -17,6 +42,17 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+    width: 420px;
+  }
+@media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270;
+  }
 }
 .galery__text {
   @include margin(0, 0, 10px, 0);
@@ -34,6 +70,16 @@
   margin-bottom: 16px;
 }
 .galery__title {
+  @media screen and (max-width: 767px) {
+    font-size: 28px;
+    line-height: 1.18;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 28px;
+    line-height: 1.18;
+    margin-bottom: 30px;
+  }
   @include margin(0, 0, 50px, 0);
   font-weight: 700;
   font-size: 36px;
