--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,15 +1,23 @@
 .portfolio {
     background-color: var(--hero-color);
 }
+
 .items {
-    text-align: center;
+    @media screen and (max-width: 767px) {
+  text-align: center;
     flex-wrap: wrap;
     align-items: center;
-    display: flex;
-   
+    
+    width: 450px;
 }
-.items {
-  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+flex-wrap: wrap;
+  }
+  
+  @media screen and (max-width: 1199px) {
+display: flex;
+  }
 }
 .items > .header__item:not(:last-child) {
   margin-right: 50px;
@@ -22,9 +30,19 @@
 }
 .filter {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
+    
+    margin-bottom: 40px;
+      @media screen and (max-width: 767px) {
+  
+}
+  @media screen and (min-width: 768px) {
+  }
+  
+  @media screen and (max-width: 1199px) {
+
+  }
 }
 
 .portfolio__item {
@@ -32,6 +50,16 @@
     .header__list > &:not(:nth-last-child(-n + 3)) {
         margin-bottom: 30px;
     }
+    width: 100%;
+      @media screen and (max-width: 767px) {
+  flex-basis: 50%;
+}
+  @media screen and (min-width: 768px) {
+  }
+  
+  @media screen and (max-width: 1199px) {
+
+  }
 }
 .portfolio__cadr-overflow {
     position: relative;
