--- a/sass/layouts/_softskills.scss
+++ b/sass/layouts/_softskills.scss
@@ -1,5 +1,18 @@
+@media screen and (min-width: 480px) {
+
+}
+@media screen and (min-width: 768px) {
+
+}
+@media screen and (min-width: 1200px) {
+
+}
 .softskills__title-text {
-  width: 696px;
+  width: 360px;
+  @media screen and (min-width: 768px){
+    width: 696px;
+  }
+
   @include margin(0, auto, 30px, auto);
   @include padding(0, 0, 0, 0);
   color: var(--hero-color);
@@ -14,29 +27,83 @@
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--main-title-color);
+  margin-bottom: 10px;
+  text-align: center;
 }
+
 .softskills__after-title {
   @extend %font;
   line-height: 1.71;
   color: var(--second-text-color);
+  text-align: left;
+  width: 420px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
+
 }
 .softskills__list {
-  @extend %align-list;
-  text-align: left;
+  margin-bottom: -30px;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+  }
 }
-
+.softskills__pre-title {
+  @media screen and (max-width: 767px) {
+    text-align: left;
+    width: 420px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    width: 420px;
+    flex-basis: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    margin-right: 15px;
+  flex-basis: calc(100% / 4 - 30px);
+  }
+}
 .softskills__list > .softskills__pre-title:not(:last-child) {
-  margin-right: 30px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+  
+  
+
 }
 .softskills__list > .item {
-  width: 270px;
+  width: 354px;
 }
 .softskills__link {
-  @extend %align-list;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  width: 270px;
+  width: 420px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
+   @media screen and (min-width: 768px) {
+    width: 354px;
+      flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    margin-right: 15px;
+  flex-basis: calc(100% / 4 - 30px);
+  }
 }
