--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,71 @@ body {
   height: 12px;
 }
 
+header__menu-list header__menu-item header__menu-link-style social__menu .social__menu-item {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+}
+
+.link__social-menu {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  padding: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu-link {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  display: block;
+  padding: 25px 16px;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu {
+  position: absolute;
+  background-color: var(--hero-color);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  position: fixed;
+  z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.header__menu .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.icon-close {
+  display: block;
+  position: absolute;
+  fill: currentColor;
+  margin-top: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu-btn {
+  background-color: transparent;
+  margin-left: auto;
+  display: inline-flex;
+  border: none;
+  align-items: center;
+}
+
 .hero {
   display: flex;
   align-items: center;
@@ -226,6 +291,7 @@ body {
   background-size: cover;
   max-width: 100%;
   min-height: 400px;
+  padding: 0;
   background-color: var(--footer-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mob/header-png1x.png);
 }
@@ -250,6 +316,7 @@ body {
 
 @media screen and (min-width: 768px) and (min-width: 1200px) {
   .hero {
+    min-height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/header-1x.png);
   }
 }
@@ -261,7 +328,7 @@ body {
 }
 
 .hero__title {
-  width: 480px;
+  width: 360px;
   margin-top: 0;
   margin-right: auto;
   margin-bottom: 30px;
@@ -271,12 +338,20 @@ body {
   padding-bottom: 0;
   padding-left: 0;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .softskills__title-text {
@@ -981,60 +1056,45 @@ body {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 360px) {
   .container {
     width: 480px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 360px) and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (max-width: 360px) and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 360px) and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
 }
 
-.container .header__navigation {
-  min-height: 80px;
-  margin-right: auto;
-}
-
-.container > .hero__btn {
-  margin: inherit;
-}
-
-.container > .footer__btn {
-  display: flex;
-}
-
-.container > .link.logo {
-  padding: 0;
-  margin: 0 0 20px 0;
-}
-
-.btn__menu {
-  display: inline-flex;
-  border: none;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-}
-
-.btn__menu .icon-close {
-  display: none;
-}
-
-.btn__menu.is-open .icon-close {
-  display: block;
-}
-
-.btn__menu.is-open .icon-menu {
-  display: none;
+@media screen and (max-width: 360px) {
+  .container .header__navigation {
+    min-height: 80px;
+    margin-right: auto;
+  }
+  .container > .hero__btn {
+    margin: inherit;
+  }
+  .container > .footer__btn {
+    display: flex;
+  }
+  .container > .link.logo {
+    padding: 0;
+    margin: 0 0 20px 0;
+  }
 }
 
 .hero__btn {
@@ -1042,7 +1102,6 @@ body {
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
-  display: flex;
   text-align: center;
   transition: color var(--duration) linear;
 }
@@ -1165,6 +1224,12 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
+}
+
+@media screen and (max-width: 360px) {
+  .section {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 768px) {
