--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,6 +3,9 @@
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+  @media screen and (max-width: 360px) {
+    
+    width: 480px;
   @media screen and (min-width: 480px) {
     
     width: 480px;
@@ -29,4 +32,5 @@
     padding: 0;
     margin: 0 0 20px 0;
   }
+}
 }
