--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,15 +3,15 @@
     padding-top: 60px;
     padding-bottom: 60px;
     text-align: center; 
-     @media screen and (min-width: 480px) {
-    
-  }
-  @media screen and (max-width: 768px) {
-    width: 768px;  
-  }
+    @media screen and (max-width: 360px) {
+      width: 100%;
+    }
+    @media screen and (max-width: 768px) {
+      width: 768px;  
+    }
     @media screen and (min-width: 1200px) {
-    padding-top: 94px;
-    padding-bottom: 94px;
+      padding-top: 94px;
+      padding-bottom: 94px;
     }
     
 }
