--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -88,3 +88,69 @@ display: none;
   width: 16px;
   height: 12px; 
 }
+header__menu-list
+header__menu-item
+header__menu-link-style
+social__menu
+.social__menu-item {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+}
+.link__social-menu {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+    padding: 10px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__menu-link {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    display: block;
+    padding: 25px 16px;
+    color: #212121;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__menu {
+position: absolute;
+background-color: var(--hero-color);
+width: 100vw;
+height: 100vh;
+top: 0;
+position: fixed;
+z-index: 5;
+padding-top: 48px;
+padding-bottom: 48px;
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+
+.icon-close {
+  display: block;
+  position: absolute;
+  fill: currentColor;
+  margin-top: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.header__menu-btn {
+background-color: transparent;
+margin-left: auto;
+display: inline-flex;
+border: none;
+align-items: center;
+}
