--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,6 +8,7 @@
   background-size: cover;
   max-width: 100%;
   min-height: 400px;
+  padding: 0;
   background-color: var(--footer-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -37,9 +38,10 @@
       ), url(../images/tab/header2x.png);
     }
     @media screen and (min-width: 1200px) {
-    background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
+      min-height: 600px;
+      background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
     ),
     url(../images/desktop/header-1x.png);
     @media (min-device-pixel-ratio: 2),
@@ -52,15 +54,21 @@
     }
   }
 }}
+
 .hero__title {
-  width: 480px;
+  width: 360px;
   @include margin(0, auto, 30px, auto);
   @include padding(0, 0, 0, 0);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-color);
+  @media screen and (min-width: 1200px) {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
