--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -147,7 +147,8 @@ padding-bottom: 48px;
 
 
 
-.header__menu-btn {
+.header__btn-close,
+.header__btn-open {
 background-color: transparent;
 margin-left: auto;
 display: inline-flex;
