--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,8 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__menu-btn {
+.header__btn-close,
+.header__btn-open {
   background-color: transparent;
   margin-left: auto;
   display: inline-flex;
