--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -6,9 +6,9 @@
     @media screen and (max-width: 360px) {
       width: 100%;
     }
-    @media screen and (max-width: 768px) {
-      width: 768px;  
-    }
+   // @media screen and (max-width: 768px) {
+     // width: 768px;  
+    //}
     @media screen and (min-width: 1200px) {
       padding-top: 94px;
       padding-bottom: 94px;
