--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,9 +3,9 @@
     padding-top: 60px;
     padding-bottom: 60px;
     text-align: center; 
-    @media screen and (max-width: 360px) {
-      width: 100%;
-    }
+    //@media screen and (max-width: 360px) {
+     // width: 100%;
+    //}
    // @media screen and (max-width: 768px) {
      // width: 768px;  
     //}
