--- a/css/main.css
+++ b/css/main.css
@@ -247,22 +247,27 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
 }
 
 .header__menu {
-  position: absolute;
-  background-color: var(--hero-color);
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  position: fixed;
-  z-index: 5;
-  padding-top: 48px;
-  padding-bottom: 48px;
+  display: none;
 }
 
-.header__menu .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+@media screen and (max-width: 768px) {
+  .header__menu {
+    position: absolute;
+    background-color: var(--hero-color);
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    position: fixed;
+    z-index: 5;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .header__menu .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
 
 .icon-close {
@@ -391,19 +396,7 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
   line-height: 1.71;
   color: var(--second-text-color);
   text-align: left;
-  width: 420px;
-}
-
-@media screen and (min-width: 768px) {
-  .softskills__after-title {
-    width: 354px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .softskills__after-title {
-    width: 270px;
-  }
+  width: 100%;
 }
 
 .softskills__list {
@@ -464,7 +457,7 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 420px;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -473,9 +466,7 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
 
 @media screen and (min-width: 768px) {
   .softskills__link {
-    width: 354px;
     flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
   }
 }
 
@@ -545,15 +536,10 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
   padding-bottom: 30px;
 }
 
-.galery__list {
-  text-align: left;
-}
-
 @media screen and (min-width: 768px) {
   .galery__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
   }
 }
 
@@ -561,7 +547,6 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
   .galery__list {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -15px;
   }
 }
 
@@ -572,6 +557,28 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
 @media screen and (min-width: 768px) {
   .galery__list > .galery__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .galery__item {
+    text-align: left;
+    width: 420px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .galery__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 15px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .galery__item {
+    width: 270px;
+    margin-right: 15px;
+    flex-basis: calc(100% / 4 - 30px);
   }
 }
 
@@ -1052,50 +1059,50 @@ header__menu-list header__menu-item header__menu-link-style social__menu .social
 }
 
 .container {
-  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 360px) {
   .container {
-    width: 480px;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 360px) and (min-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
 
-@media screen and (max-width: 360px) and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
 
-@media screen and (max-width: 360px) and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
 }
 
-@media screen and (max-width: 360px) {
-  .container .header__navigation {
-    min-height: 80px;
-    margin-right: auto;
-  }
-  .container > .hero__btn {
-    margin: inherit;
-  }
-  .container > .footer__btn {
-    display: flex;
-  }
-  .container > .link.logo {
-    padding: 0;
-    margin: 0 0 20px 0;
-  }
+.container .header__navigation {
+  min-height: 80px;
+  margin-right: auto;
+}
+
+.container > .hero__btn {
+  margin: inherit;
+}
+
+.container > .footer__btn {
+  display: flex;
+}
+
+.container > .link.logo {
+  padding: 0;
+  margin: 0 0 20px 0;
 }
 
 .hero__btn {
