--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,16 +1,12 @@
 
 .container {
-  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
   @media screen and (max-width: 360px) {
-    
-    width: 480px;
+    width: 100%;}
   @media screen and (min-width: 480px) {
-    
     width: 480px;
   }
-  
   @media screen and (min-width: 768px) {
     width: 768px;
   }
@@ -32,5 +28,4 @@
     padding: 0;
     margin: 0 0 20px 0;
   }
-}
 }
