--- a/sass/layouts/_galery.scss
+++ b/sass/layouts/_galery.scss
@@ -6,16 +6,16 @@
   padding-bottom: 30px;
 }
 .galery__list {
-  text-align: left;
+  
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -15px;
+    
   }
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -15px;
+    
     
   }
   
@@ -26,15 +26,22 @@
     }
   }
 }
+
 .galery__item {
   @media screen and (max-width: 767px) {
-  
+  text-align: left;
+    width: 420px;
 }
   @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 15px;
   }
   
   @media screen and (max-width: 1199px) {
-
+width: 270px;
+    margin-right: 15px;
+  flex-basis: calc(100% / 4 - 30px);
+  
   }
 }
 .galery__style {
