--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -120,6 +120,8 @@ social__menu
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header__menu {
+  display: none;
+  @media screen and (max-width: 768px) {
 position: absolute;
 background-color: var(--hero-color);
 width: 100vw;
@@ -134,6 +136,8 @@ padding-bottom: 48px;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+  }
+    
   }
 }
 
