--- a/sass/layouts/_softskills.scss
+++ b/sass/layouts/_softskills.scss
@@ -36,14 +36,14 @@
   line-height: 1.71;
   color: var(--second-text-color);
   text-align: left;
-  width: 420px;
-  @media screen and (min-width: 768px) {
-    width: 354px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 270px;
-  }
-
+  width: 100%;
+  //width: 420px;
+  //@media screen and (min-width: 768px) {
+  //  width: 354px;
+  //}
+  //@media screen and (min-width: 1200px) {
+  //  width: 270px;
+ // }
 }
 .softskills__list {
   margin-bottom: -30px;
@@ -91,15 +91,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 420px;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
    @media screen and (min-width: 768px) {
-    width: 354px;
+    //width: 354px;
       flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
+    //margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
     width: 270px;
