--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-.links {
+.link {
   text-decoration: none;
 }
 
-.lists {
+.list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -186,21 +186,21 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo--header {
+.header__logo {
   padding-top: 16px;
   padding-bottom: 16px;
   color: #000000;
 }
 
 @media screen and (min-width: 768px) {
-  .logo--header {
+  .header__logo {
     padding: 26px 0;
     margin-right: 76px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .logo--header {
+  .header__logo {
     margin-right: 100px;
   }
 }
@@ -210,11 +210,11 @@
   color: #ffffff;
 }
 
-.logo:hover.logo--header, .logo:focus.logo--header, .logo:hover.logo--footer, .logo:focus.logo--footer {
+.logo:hover.header__logo, .logo:focus.header__logo, .logo:hover.logo--footer, .logo:focus.logo--footer {
   color: #2196f3;
 }
 
-.logo--accent {
+.logo-accent {
   color: #2196f3;
 }
 
@@ -351,7 +351,7 @@
   border: 2px solid #2196f3;
 }
 
-.link__navigation {
+.navigation__link {
   font-size: 40px;
   font-weight: 500;
   line-height: 1.18;
@@ -364,7 +364,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .link__navigation {
+  .navigation__link {
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -373,7 +373,7 @@
   }
 }
 
-.link__navigation:hover, .link__navigation:focus {
+.navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
 }
 
@@ -756,19 +756,19 @@ body {
   background-color: #ffffff;
 }
 
-.menu__wrapper {
+.header__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 @media screen and (max-width: 767px) {
-  .menu__wrapper {
+  .header__navigation {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .menu-container .menu__wrapper {
+  .menu-container .header__navigation {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     height: 100%;
@@ -780,7 +780,7 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .menu__wrapper {
+  .header__navigation {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -837,7 +837,7 @@ body {
   }
 }
 
-.contacts__thumb {
+.contact__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
