--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,4 +1,4 @@
-.menu__wrapper {
+.header__navigation {
   display: flex;
   @media screen and (max-width: 767px) {
     justify-content: space-between;
@@ -58,7 +58,7 @@
   }
 }
 
-.contacts__thumb {
+.contact__link {
   display: flex;
   flex-direction: column;
 }
